--- a/rosmap/config/config.json
+++ b/rosmap/config/config.json
@@ -1,16 +1,16 @@
 {
-  "github_username": "",
+  "github_username": "nehir-altinkaya",
   "github_password": "",
-  "github_search_topic": "ros",
+  "github_search_topic": "ros2",
   "github_search_rate_limit": 1800,
   "github_api_rate_limit": 5000,
   "rosdistro_url": "https://github.com/ros/rosdistro",
-  "rosdistro_workspace": "~/.rosdistro_workspace/",
+  "rosdistro_workspace": "/Users/nehiraltinkaya/.rosdistro_workspace/",
   "bitbucket_repo_page": "https://bitbucket.org/repo/all/",
   "bitbucket_repo_search_string": "ros",
   "bitbucket_api_rate_limit": 1000,
   "version_control_systems": ["git","svn","hg"],
-  "analysis_workspace" : "~/.analysis_workspace/",
+  "analysis_workspace" : "/Users/nehiraltinkaya/.analysis_workspace/",
   "repository_folder": "repositories/",
   "social_coding_sites": ["bitbucket", "github"],
   "package_xml_dependency_tags": ["build_depend",
