--- a/rosmap/config/config.json
+++ b/rosmap/config/config.json
@@ -5,14 +5,26 @@
   "github_search_rate_limit": 1800,
   "github_api_rate_limit": 5000,
   "rosdistro_url": "https://github.com/ros/rosdistro",
-  "rosdistro_workspace": "/Users/nehiraltinkaya/.rosdistro_workspace/",
-  "bitbucket_repo_page": "https://bitbucket.org/repo/all/",
-  "bitbucket_repo_search_string": "ros",
-  "bitbucket_api_rate_limit": 1000,
+  "rosdistro_workspace": "~/.rosdistro_workspace",
+
+  "parsers": ["github_repository_parser", "rosdistro_repo_parser"],
+  "parsers_config": {
+    "github_repository_parser": {
+      "github_username": "nehir-altinkaya",
+      "github_password": "",
+      "github_search_topic": "ros2",
+      "github_search_rate_limit": 1800,
+      "github_api_rate_limit": 5000
+    },
+    "rosdistro_repo_parser": {
+      "rosdistro_url": "https://github.com/ros/rosdistro",
+      "rosdistro_workspace": "~/.rosdistro_workspace"
+      }
+  },
   "version_control_systems": ["git","svn","hg"],
-  "analysis_workspace" : "/Users/nehiraltinkaya/.analysis_workspace/",
+  "analysis_workspace" : "~/.analysis_workspace",
   "repository_folder": "repositories/",
-  "social_coding_sites": ["bitbucket", "github"],
+  "social_coding_sites": ["github"],
   "package_xml_dependency_tags": ["build_depend",
                                   "run_depend",
                                   "depend",
